--- a/p08_Select/src/main/webapp/style/style.css
+++ b/p08_Select/src/main/webapp/style/style.css
@@ -33,13 +33,16 @@ div#goodsListArea {
 	flex: 1;
 }
 #goodsListArea .listCol>span:nth-child(3) {
-	width: 120px;
+	width: 110px;
 }
 #goodsListArea .listCol>span:nth-child(4) {
-	width: 80px;
+	width: 70px;
 }
 #goodsListArea .listCol>span:nth-child(5) {
-	width: 70px;
+	width: 50px;
+}
+#goodsListArea .listCol>span:nth-child(6) {
+	width: 50px;
 }
 /* 게시판 목록의 공통 사항 끝 */
 
